  property changes were not handled correctly.

* Make $file_viewer more flexible so it can handle file mapping URLs
  which have CGI parameters.  Submitted by vadz@users.sourceforge.net.

* Scmbug integration now works correctly when there are multiple
  commits to the same file under the one Bug ID.  Fixed by
  rob_webset@users.sourceforge.net.

Version 1.9.6

* Ability to create Codestriker topics automatically from a Subversion
  commit, via the bin/subversion-post-commit.pl script.  Once the
  appropriate configuration is set at the start of the file, simply
  add it to your Subversion repos/hooks/post-commit file as the
  following:
  
  /path/to/codestriker/bin/subversion-post-commit.pl "$REPOS" "$REV"

* "Default to head" option for CVS topic creation was not used when
  selected, but when it was unselected.  This has now been fixed.  
  Spotted by mnk26@users.sourceforge.net.
  
* Fix for "v-string in use/require non-portable" warning when using
  Perl 5.10 from rob_webset@users.sourceforge.net.
  
* Deleting a topic connected with a TestDirector bug has been fixed
  by rob_webset@users.sourceforge.net.
  
* Creation of Subversion topics which use a file for the module field
  in the create topic screen may not work correctly for some versions
  of Subversion.  This has now been fixed by 
  rob_webset@users.sourceforge.net.
  
* Make sure XML representation of a topic has its data properly escaped.
  Fixed by rob_webset@users.sourceforge.net.  
  
* Ability to parse git patches correctly.

* Ability to parse hg diffs (Mercurial SCM) correctly.

* Better detection of filename extensions for highlighting.  This
  previously caused issues for temporary directories which contained 
  a period, but the filename itself didn't.  Reported by
  rob_webset@users.sourceforge.net.
  
* Scmbug integration now works correctly if multiple bug IDs are
  specified is the create topic screen.  Fixed by
  rob_webset@users.sourceforge.net.
  